// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExchangeTransactionsRowMobile > should render (Expired) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-9fdtr0"
        data-testid="TableRow"
      >
        <td>
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
          >
            <div
              class="flex h-11 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
              data-testid="TableRow__mobile"
            >
              <div
                class="text-sm font-semibold"
              >
                <span
                  class="no-ligatures text-theme-primary-600 css-0"
                  data-testid="TruncateMiddle"
                >
                  id
                </span>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="hidden text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 sm:block"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
                <div
                  class="hidden sm:block"
                >
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                </div>
                <span
                  class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
                >
                  <div
                    class="text-theme-danger-400 css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="clock-error"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M15 8c0-3.9-3.1-7-7-7S1 4.1 1 8s3.1 7 7 7m7 4c2.2 0 4-1.8 4-4s-1.8-4-4-4-4 1.8-4 4 1.8 4 4 4z"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-miterlimit="10"
                        stroke-width="2"
                      />
                      <path
                        d="M17 13l-4 4"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        d="M8 8V5m0 3l1 1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-miterlimit="10"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </span>
                <div
                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                  type="vertical"
                />
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent cursor-pointer !p-0"
                  data-testid="TableRow__mobile-remove-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="trash"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-3"
            >
              <div
                class="flex w-36 flex-col gap-2 sm:hidden"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Age
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Exchange
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                />
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  From
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded flex items-center justify-center h-full px-1.5 css-is8euj"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 1 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  To
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded flex items-center justify-center h-full px-1.5 css-1xi6cb5"
                    color="success-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        + 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render (Failed) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-9fdtr0"
        data-testid="TableRow"
      >
        <td>
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
          >
            <div
              class="flex h-11 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
              data-testid="TableRow__mobile"
            >
              <div
                class="text-sm font-semibold"
              >
                <span
                  class="no-ligatures text-theme-primary-600 css-0"
                  data-testid="TruncateMiddle"
                >
                  id
                </span>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="hidden text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 sm:block"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
                <div
                  class="hidden sm:block"
                >
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                </div>
                <span
                  class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
                >
                  <div
                    class="text-theme-danger-400 css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="circle-cross"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="10"
                          r="9"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M7 13l6-6M13 13L7 7"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
                <div
                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                  type="vertical"
                />
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent cursor-pointer !p-0"
                  data-testid="TableRow__mobile-remove-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="trash"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-3"
            >
              <div
                class="flex w-36 flex-col gap-2 sm:hidden"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Age
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Exchange
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                />
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  From
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded flex items-center justify-center h-full px-1.5 css-is8euj"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 1 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  To
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded flex items-center justify-center h-full px-1.5 css-1xi6cb5"
                    color="success-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        + 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render (Finished) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-9fdtr0"
        data-testid="TableRow"
      >
        <td>
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
          >
            <div
              class="flex h-11 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
              data-testid="TableRow__mobile"
            >
              <div
                class="text-sm font-semibold"
              >
                <span
                  class="no-ligatures text-theme-primary-600 css-0"
                  data-testid="TruncateMiddle"
                >
                  id
                </span>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="hidden text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 sm:block"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
                <div
                  class="hidden sm:block"
                >
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                </div>
                <span
                  class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
                >
                  <div
                    class="text-theme-success-600 css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="circle-check-mark"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="10"
                          r="9"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
                <div
                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                  type="vertical"
                />
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent cursor-pointer !p-0"
                  data-testid="TableRow__mobile-remove-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="trash"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-3"
            >
              <div
                class="flex w-36 flex-col gap-2 sm:hidden"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Age
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Exchange
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                />
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  From
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded flex items-center justify-center h-full px-1.5 css-is8euj"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 1 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  To
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded flex items-center justify-center h-full px-1.5 css-1xi6cb5"
                    color="success-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        + 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render (New) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-9fdtr0"
        data-testid="TableRow"
      >
        <td>
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
          >
            <div
              class="flex h-11 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
              data-testid="TableRow__mobile"
            >
              <div
                class="text-sm font-semibold"
              >
                <span
                  class="no-ligatures text-theme-primary-600 css-0"
                  data-testid="TruncateMiddle"
                >
                  id
                </span>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="hidden text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 sm:block"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
                <div
                  class="hidden sm:block"
                >
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                </div>
                <span
                  class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
                >
                  <div
                    class="text-theme-warning-300 css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="clock"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-miterlimit="10"
                        stroke-width="2"
                        transform="translate(1.5 1.5)"
                      >
                        <circle
                          cx="8.5"
                          cy="8.5"
                          r="9"
                        />
                        <path
                          d="M8.5 8.5V5.2M8.5 8.5l3.9 3.9"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
                <div
                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                  type="vertical"
                />
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent cursor-pointer !p-0"
                  data-testid="TableRow__mobile-remove-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="trash"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-3"
            >
              <div
                class="flex w-36 flex-col gap-2 sm:hidden"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Age
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Exchange
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                />
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  From
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded flex items-center justify-center h-full px-1.5 css-is8euj"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 1 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  To
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded flex items-center justify-center h-full pr-1.5 css-1xi6cb5"
                    color="success-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <div
                        class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-700 text-theme-success-700 dark:text-white/70 dark:bg-theme-success-700 h-5 w-5"
                        data-testid="AmountLabel__hint"
                      >
                        <div
                          class="dark:text-white css-15txs7d"
                          height="10"
                          width="10"
                        >
                          <svg
                            id="hint-small"
                            viewBox="0 0 10 10"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                            <circle
                              cx="4.5"
                              cy="1"
                              fill="currentColor"
                              r="1"
                            />
                          </svg>
                        </div>
                      </div>
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        + 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render (Refunded) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-9fdtr0"
        data-testid="TableRow"
      >
        <td>
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
          >
            <div
              class="flex h-11 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
              data-testid="TableRow__mobile"
            >
              <div
                class="text-sm font-semibold"
              >
                <span
                  class="no-ligatures text-theme-primary-600 css-0"
                  data-testid="TruncateMiddle"
                >
                  id
                </span>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="hidden text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 sm:block"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
                <div
                  class="hidden sm:block"
                >
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                </div>
                <span
                  class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
                >
                  <div
                    class="text-theme-warning-300 css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="circle-exclamation-mark"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="10"
                          r="9"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 10.5v-5"
                          stroke-linecap="round"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 14h0"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
                <div
                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                  type="vertical"
                />
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent cursor-pointer !p-0"
                  data-testid="TableRow__mobile-remove-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="trash"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-3"
            >
              <div
                class="flex w-36 flex-col gap-2 sm:hidden"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Age
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Exchange
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                />
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  From
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded flex items-center justify-center h-full px-1.5 css-is8euj"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 1 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  To
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded flex items-center justify-center h-full px-1.5 css-1xi6cb5"
                    color="success-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        + 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render (Verifying) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-9fdtr0"
        data-testid="TableRow"
      >
        <td>
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
          >
            <div
              class="flex h-11 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
              data-testid="TableRow__mobile"
            >
              <div
                class="text-sm font-semibold"
              >
                <span
                  class="no-ligatures text-theme-primary-600 css-0"
                  data-testid="TruncateMiddle"
                >
                  id
                </span>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="hidden text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 sm:block"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
                <div
                  class="hidden sm:block"
                >
                  <div
                    class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                    type="vertical"
                  />
                </div>
                <span
                  class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
                >
                  <div
                    class="text-theme-warning-300 css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="circle-exclamation-mark"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="10"
                          r="9"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 10.5v-5"
                          stroke-linecap="round"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 14h0"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
                <div
                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                  type="vertical"
                />
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent cursor-pointer !p-0"
                  data-testid="TableRow__mobile-remove-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="trash"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-3"
            >
              <div
                class="flex w-36 flex-col gap-2 sm:hidden"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Age
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Exchange
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                />
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  From
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded flex items-center justify-center h-full px-1.5 css-is8euj"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 1 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex w-36 flex-col gap-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  To
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded flex items-center justify-center h-full px-1.5 css-1xi6cb5"
                    color="success-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        + 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render N/A if no orderId 1`] = `
<div>
  <tr
    class="group css-9fdtr0"
    data-testid="TableRow"
  >
    <td>
      <div
        class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
      >
        <div
          class="flex h-11 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
          data-testid="TableRow__mobile"
        >
          <div
            class="text-sm font-semibold"
          >
            <span
              class="text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              N/A
            </span>
          </div>
          <div
            class="flex flex-row items-center"
          >
            <span
              class="hidden text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 sm:block"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </span>
            <div
              class="hidden sm:block"
            >
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                type="vertical"
              />
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <div
                class="text-theme-danger-400 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M7 13l6-6M13 13L7 7"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </span>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
              type="vertical"
            />
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent cursor-pointer !p-0"
              data-testid="TableRow__mobile-remove-button"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-3"
        >
          <div
            class="flex w-36 flex-col gap-2 sm:hidden"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Age
            </span>
            <div
              class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
          <div
            class="flex w-36 flex-col gap-2"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Exchange
            </span>
            <div
              class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
            />
          </div>
          <div
            class="flex w-36 flex-col gap-2"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              From
            </span>
            <div
              class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="rounded flex items-center justify-center h-full px-1.5 css-is8euj"
                color="danger-bg"
                data-testid="AmountLabel__wrapper"
              >
                <div
                  class="flex space-x-1 items-center"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    - 1 BTC
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex w-36 flex-col gap-2"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              To
            </span>
            <div
              class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="rounded flex items-center justify-center h-full px-1.5 css-1xi6cb5"
                color="success-bg"
                data-testid="AmountLabel__wrapper"
              >
                <div
                  class="flex space-x-1 items-center"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    + 100 ARK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`ExchangeTransactionsRowMobile > should render transaction provider 1`] = `
<div>
  <tr
    class="group css-9fdtr0"
    data-testid="TableRow"
  >
    <td>
      <div
        class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
      >
        <div
          class="flex h-11 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
          data-testid="TableRow__mobile"
        >
          <div
            class="text-sm font-semibold"
          >
            <span
              class="no-ligatures text-theme-primary-600 css-0"
              data-testid="TruncateMiddle"
            >
              id
            </span>
          </div>
          <div
            class="flex flex-row items-center"
          >
            <span
              class="hidden text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 sm:block"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </span>
            <div
              class="hidden sm:block"
            >
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                type="vertical"
              />
            </div>
            <span
              class="flex items-center space-x-2 text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              <div
                class="text-theme-danger-400 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M7 13l6-6M13 13L7 7"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </span>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
              type="vertical"
            />
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-theme-secondary-700 bg-transparent dark:text-theme-secondary-600 dark:bg-transparent cursor-pointer !p-0"
              data-testid="TableRow__mobile-remove-button"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="trash"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-3"
        >
          <div
            class="flex w-36 flex-col gap-2 sm:hidden"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Age
            </span>
            <div
              class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
          <div
            class="flex w-36 flex-col gap-2"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Exchange
            </span>
            <div
              class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              ChangeNOW
            </div>
          </div>
          <div
            class="flex w-36 flex-col gap-2"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              From
            </span>
            <div
              class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="rounded flex items-center justify-center h-full px-1.5 css-is8euj"
                color="danger-bg"
                data-testid="AmountLabel__wrapper"
              >
                <div
                  class="flex space-x-1 items-center"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    - 1 BTC
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex w-36 flex-col gap-2"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              To
            </span>
            <div
              class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="rounded flex items-center justify-center h-full px-1.5 css-1xi6cb5"
                color="success-bg"
                data-testid="AmountLabel__wrapper"
              >
                <div
                  class="flex space-x-1 items-center"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    + 100 ARK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </td>
  </tr>
  ,
</div>
`;
